--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,14 @@
 @import '../fonts/fonts.css';
 
+@import '../../components/page/page.css';
+
+@import '../../components/header/header.css';
+
+@import '../../components/content/content.css';
+
+@import '../../components/footer/footer.css';
+
+
 :root {
     --white: #ffffff;
     --black: #212429;
