--- a/03-lection1/02-accordion/accordion.css
+++ b/03-lection1/02-accordion/accordion.css
@@ -1,1 +1,48 @@
 /* Стилизация аккордеона */
+
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@200&display=swap');
+
+.accordion {
+    border: 1px solid var(--grey-3);
+    margin-bottom: 8px;
+    border-radius: 10px;
+
+    color: var(--black);
+
+    display: block;
+    width: 35%;
+
+    cursor: default;
+}
+
+.accordion:last-child {
+    margin-bottom: 0;
+}
+
+.accordion__title::-webkit-details-marker {
+    display: none;
+}
+
+.accordion__title {
+    display: inline;
+    padding-left: 10px;
+
+    font-family: Inter;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0em;
+    text-align: left;
+}
+
+.accordion__content {
+    color: var(--grey-4);
+    padding-left: 10px;
+
+    font-family: Inter;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0em;
+    text-align: left;
+}
