--- a/03-lection1/02-accordion/accordion.css
+++ b/03-lection1/02-accordion/accordion.css
@@ -1,48 +1,40 @@
 /* Стилизация аккордеона */
 
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@200&display=swap');
-
 .accordion {
-    border: 1px solid var(--grey-3);
-    margin-bottom: 8px;
-    border-radius: 10px;
-
     color: var(--black);
 
-    display: block;
+    font-family: Inter;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0em;
+    text-align: left;
+}
+
+.accordion__item::-webkit-details-marker {
+    display: none;
+}
+
+.accordion__item {
+    border: 1px solid var(--grey-3);
+    margin-bottom: 8px;
+    padding: 24px 0 24px 20px;
+    border-radius: 10px;
+
     width: 35%;
 
     cursor: default;
 }
 
-.accordion:last-child {
+.accordion__item:last-child {
     margin-bottom: 0;
 }
 
-.accordion__title::-webkit-details-marker {
-    display: none;
-}
-
 .accordion__title {
+    color: var(--black);
     display: inline;
-    padding-left: 10px;
-
-    font-family: Inter;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 24px;
-    letter-spacing: 0em;
-    text-align: left;
 }
 
 .accordion__content {
     color: var(--grey-4);
-    padding-left: 10px;
-
-    font-family: Inter;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 24px;
-    letter-spacing: 0em;
-    text-align: left;
 }
