--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,12 @@
 @import '../fonts/fonts.css';
 
-@import '../../03-lection1/01-button/button.css';
+@import '../../components/page/page.css';
+
+@import '../../components/header/header.css';
+
+@import '../../components/content/content.css';
+
+@import '../../components/footer/footer.css';
 
 :root {
     --white: #ffffff;
