--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,12 +1,10 @@
 @import '../fonts/fonts.css';
-
 @import '../../components/page/page.css';
-
 @import '../../components/header/header.css';
-
-@import '../../components/content/content.css';
-
+@import '../../components/preview/preview.css';
 @import '../../components/footer/footer.css';
+@import '../../components/container/container.css';
+@import '../../components/card/card.css';
 
 
 :root {
@@ -30,4 +28,8 @@
 
 * {
     font-family: 'Roboto', sans-serif;
+}
+
+html, body {
+    height: 100%;
 }
