--- a/components/footer/footer.css
+++ b/components/footer/footer.css
@@ -15,7 +15,7 @@
     font-size: 16px;
     font-weight: 400;
     line-height: 24px;
-    padding: 0 235px;
+    max-width: 640px;
     margin: 0 0 16px 0;
 }
 
