--- a/04-lection2/02-skeleton/skeleton.css
+++ b/04-lection2/02-skeleton/skeleton.css
@@ -1,40 +1,46 @@
 .skeleton{
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    width: 579px;
-    height: 192px;
     flex-shrink: 0;
+    gap: 24px;
     border: 1px solid var(--grey-3);
     border-radius: 8px;
+
+    padding: 24px 40px 32px 40px;
 }
 
 .skeleton__header{
     display: flex;
     align-items: center;
-    gap: 8px;
-    margin: 24px 218px 0 24px;
+    gap: 16px;
 }
 
 .skeleton__top {
     display: flex;
     flex-direction: column;
     gap: 8px;
+}
+
+.skeleton__element {
+    height: 20px;
+    background-color: var(--grey-2);
+    background: linear-gradient(93deg, #DDE2E5 6.44%, #E2E6E8 38.47%, #F3F5F5 56.48%, #E3E7EA 77.5%, #DDE2E5 102.52%);
+}
+
+.skeleton__element_small {
+    width: 172px;
+}
+
+.skeleton__element_medium {
     width: 257px;
 }
 
-.skeleton__elements {
-    height: 20px;
-    background-color: var(--grey-2);
-    background: linear-gradient(93deg, #DDE2E5 6.44%, #E2E6E8 38.47%, #F3F5F5 56.48%, #E3E7EA 77.5%, #DDE2E5 102.52%); 
-    border: var(--grey-3);
-    border-radius: 8px;
+.skeleton__element_large {
+    width: 515px;
 }
 
 .skeleton__bottom {
     display: flex;
     flex-direction: column;
     gap: 8px;
-    max-width: 515px;
-    margin: 24px 40px 32px 24px;
 }
